# research-lab

./: .gitignore  CLAUDE.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
docs/: API.md  ARCHITECTURE.md  CLI.md  CTX_API.md  DEPLOYMENT.md  MCP.md  SKILL.md  index.md  quickstart.md
frontend/: env.d.ts  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/src/: App.vue  main.ts  router.ts  style.css
frontend/src/components/dashboard/: DashboardView.vue  StepView.vue
frontend/src/components/experiment/: AssetLibrary.vue  CanvasReport.vue  ExperimentDetail.vue  ExperimentList.vue  PipelineBar.vue  StepCanvas.vue
frontend/src/components/layout/: AppShell.vue
frontend/src/components/nav/: ExperimentSelector.vue  PipelineNav.vue
frontend/src/composables/: useActivityFeed.ts  useExperimentDetail.ts  useExperiments.ts  useGpuStats.ts  useNotifications.ts  useRunHistory.ts  useTheme.ts  useToast.ts  useToolbarContext.ts  useWebSocket.ts  useZoom.ts
frontend/src/types/: index.ts
src/research_lab/: __init__.py  client.py  config.py  context.py  schemas.py
src/research_lab/cli/: __init__.py  commands.py
src/research_lab/compute/: __init__.py  base.py  local.py
src/research_lab/engine/: __init__.py  base.py  jupyter.py  session.py
src/research_lab/mcp/: __init__.py  server.py
src/research_lab/pipeline/: __init__.py  runner.py  serializer.py  store.py
src/research_lab/server/: __init__.py  app.py  ws.py
tests/: test_engine.py  test_pipeline.py  test_server.py
(+17 files in other folders)
