[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "research-lab"
version = "0.1.0"
description = "AI-First ML Experiment Management Platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "jupyter-client>=8.6",
    "pyzmq>=25.0",
    "click>=8.0",
    "mcp[cli]>=1.20",
    "httpx>=0.27",
    "paramiko>=3.4",
    "aiofiles>=23.0",
    "plotly>=5.20",
    "ipykernel>=6.29",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff"]

[project.scripts]
research-lab = "research_lab.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/research_lab"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
